<resources>
    <string name="app_name">Bakery</string>
    <string name="gateau_kuchen"><![CDATA[Gateau & Kuchen]]></string>
    <string name="confectionery">Confectionery</string>
    <string name="one_bite_of_saccharine_with_love">\'One bite of saccharine with love\'</string>
    <string name="avantika">~Avantika Vidhate</string>
    <string name="full_name">Enter your full name</string>
    <string name="email">Enter email ID</string>
    <string name="mob_no">Enter  mobile number</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="new_user">New user?Register now</string>
    <string name="LOGIN">LOGIN</string>
    <string name="registration">REGISTRATION</string>
    <string name="show_password">Show Password</string>
    <string name="or_register_with">Or Register with</string>
    <string name="set_new_username">Set new Username</string>
    <string name="mobile_no">Mobile no</string>
    <string name="email_id">Email ID</string>
    <string name="set_password">Set Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="pass">Password</string>
    <string name="my_profile">My Profile</string>
    <string name="settings">Settings</string>
    <string name="order_placed">Order Placed</string>
    <string name="help">Help</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="welcome_to_home_page">!!Welcome to Home Page!!</string>
    <string name="world_full_of_sweets">!! World full of sweets !!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_location">LocationActivity</string>
</resources>
