<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_regis_logo"
            android:layout_width="150sp"
            android:layout_height="150sp"
            android:layout_gravity="center"
            android:layout_marginTop="10sp"
            android:src="@drawable/aaaaa" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:backgroundTint="#EAE6DA"
            app:cardCornerRadius="15sp"
            app:cardElevation="16sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_regis_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="#E8A0B9"
                    android:fontFamily="@font/aclonica"
                    android:text="@string/registration"
                    android:textAlignment="center"
                    android:textColor="#8A6226"
                    android:textSize="25sp"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:fontFamily="@font/aclonica"
                    android:text="@string/full_name"
                    android:textColor="@color/brown"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_regis_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/icon_name"
                    android:drawablePadding="7sp"
                    android:fontFamily="@font/aclonica"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:fontFamily="@font/aclonica"
                    android:text="@string/email"
                    android:textColor="@color/brown"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_regis_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:drawableStart="@drawable/icon_email"
                    android:drawablePadding="7sp"
                    android:fontFamily="@font/aclonica"
                    android:hint="@string/email_id"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:fontFamily="@font/aclonica"
                    android:text="@string/mob_no"
                    android:textColor="@color/brown"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_regis_mob_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:drawableStart="@drawable/icon_mobile_no"
                    android:drawablePadding="7sp"
                    android:fontFamily="@font/aclonica"
                    android:hint="@string/mobile_no"
                    android:inputType="phone"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:fontFamily="@font/aclonica"
                    android:text="@string/set_new_username"
                    android:textColor="@color/brown"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_regis_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:drawableStart="@drawable/icon_uname"
                    android:drawablePadding="7sp"
                    android:fontFamily="@font/aclonica"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:fontFamily="@font/aclonica"
                    android:text="@string/set_password"
                    android:textColor="@color/brown"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_regis_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:drawableStart="@drawable/icon_pass"
                    android:drawablePadding="7sp"
                    android:fontFamily="@font/aclonica"
                    android:hint="@string/pass"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/chk_regis_show_hide"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:text="@string/show_password"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:buttonTint="@color/baby_pink" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:fontFamily="@font/aclonica"
                    android:text="@string/confirm_password"
                    android:textColor="@color/brown"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_regis_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:drawableStart="@drawable/icon_confirm_pass"
                    android:drawablePadding="7sp"
                    android:fontFamily="@font/aclonica"
                    android:hint="@string/confirm_password"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/butt_regis_bt2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="20sp"
                    android:layout_marginTop="15sp"
                    android:background="#DA93AB"
                    android:fontFamily="@font/aclonica"
                    android:text="@string/register"
                    android:textColor="#A87932"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>

