<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashActivity"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:layout_margin="10sp"
    android:background="@drawable/c"
    >

    <TextView
        android:id="@+id/txt_main_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/one_bite_of_saccharine_with_love"
        android:textColor="#000000"
        android:textSize="20sp"
        android:layout_gravity="start"
        android:layout_marginVertical="70sp"
        android:layout_marginStart="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:fontFamily="casual"
        android:text="@string/gateau_kuchen"
        android:textColor="#A17637"
        android:textSize="20sp"
        android:textStyle="bold" />
    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:id="@+id/lottie_home"
        app:lottie_rawRes="@raw/cakes"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        />
    <TextView
        android:id="@+id/t_main_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60sp"
        android:fontFamily="casual"
        android:text="@string/confectionery"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/ttv_main_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100sp"
        android:fontFamily="serif"
        android:text="@string/avantika"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#2E656C"
        android:layout_marginTop="180sp"
/>
</LinearLayout>