<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyProfileActivity"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:gravity="center"
        android:text="@string/my_profile"
        android:fontFamily="@font/aclonica"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@color/brown"
        />
    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="match_parent"
        android:layout_height="150sp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:id="@+id/my_profile_lottie"
        app:lottie_rawRes="@raw/profile"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16sp"
        app:cardElevation="20sp"
        app:cardBackgroundColor="@color/light_grey"
        android:layout_margin="10sp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:fontFamily="@font/aclonica"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:paddingLeft="10sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_profile_name"
                android:text=""
                android:fontFamily="@font/aclonica"
                android:textColor="@color/black"
                android:drawableLeft="@drawable/icon_username"
                android:drawablePadding="7sp"
                android:textSize="16sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:text="@string/mobile_no"
                android:textSize="16sp"
                android:fontFamily="@font/aclonica"
                android:paddingLeft="10sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_profile_mob_no"
                android:text=""
                android:fontFamily="@font/aclonica"
                android:drawableLeft="@drawable/icon_contact_us"
                android:drawablePadding="7sp"
                android:textSize="16sp"
                android:textColor="@color/black"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="About"
                android:fontFamily="@font/aclonica"
                android:paddingLeft="10sp"
                android:textSize="16sp"
                android:layout_marginTop="5sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_profile_about"
                android:text=""
                android:fontFamily="@font/aclonica"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:drawableLeft="@drawable/icon_names"
                android:paddingLeft="9sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Username"
                android:fontFamily="@font/aclonica"
                android:paddingLeft="10sp"
                android:textSize="16sp"
                android:layout_marginTop="5sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_profile_username"
                android:text=""
                android:fontFamily="@font/aclonica"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:drawableLeft="@drawable/icon_unames"
                android:paddingLeft="9sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Password"
                android:fontFamily="@font/aclonica"
                android:paddingLeft="10sp"
                android:textSize="16sp"
                android:layout_marginTop="5sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_profile_password"
                android:text=""
                android:fontFamily="@font/aclonica"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:drawableLeft="@drawable/icon_password"
                android:paddingLeft="9sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Token"
                android:fontFamily="@font/aclonica"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:paddingLeft="10sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/token_my_profile"
                android:fontFamily="@font/aclonica"
                android:textSize="10sp"
                android:textIsSelectable="true"
                android:textColor="@color/black"
                android:paddingLeft="10sp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>